[package]
name = "arenamer"
version = "0.1.0"
description = "Rename multiple files with values from an excel file."
repository = "https://github.com/hufuhufu/arenamer"
edition = "2021"
rust-version = "1.74.1"
license = "MIT"
keywords = ["rename", "cli", "tool"]

[dependencies]
calamine = "0.24.0"
clap = { version = "4.5.4", features = ["derive"] }
regex = { version = "1.10.4", default-features = false, features = ["std"] }
serde = "1.0.201"
serde_derive = "1.0.201"
thiserror = "1.0.60"

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable link-time optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary
